--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,6 +1,23 @@
 .product {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 10px;
+
+    /* align-items: center; */
+}
+
+.product:hover {
+    border: 1px solid;
+}
+
+.product-img {
+    height: 300px;
+    width: 100%;
+    aspect-ratio: 4/ 1;
+    margin-bottom: 20px;
+}
+.products {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
