change logo route

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -3,15 +3,15 @@
     background-color: #555555;
     color: white;
 }
-.logo {
-    width: 10vw;
-    max-width: 70px;
-}
 
 .navbar-brand {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-right: 3%;
+    font-size: 2rem;
+}
+.logo {
+    color: whitesmoke !important;
     font-size: 2rem;
 }
