--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -16,6 +16,12 @@
     aspect-ratio: 4/ 1;
     margin-bottom: 20px;
 }
+
+@media screen and (max-width: 768px) {
+    .product-img {
+      height: 200px
+    }
+}
 .products {
     width: 100%;
     height: 100%;
